--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Object Practice</title>
-    <script src="main.js" defer></script>
-    <style>
-        body {
-            background-color: black;
-        }
-    </style>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Object Practice</title>
+        <script src="main.js" defer></script>
+        <style>
+            body {
+                background-color: rgb(34, 34, 34);
+            }
 
-<body>
+        </style>
+    </head>
 
-</body>
+    <body>
+
+    </body>
 
 </html>
