--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Object Practice</title>
+        <link rel="stylesheet" href="style.css">
+        <title>Library</title>
         <script src="main.js" defer></script>
-        <style>
-            body {
-                background-color: rgb(34, 34, 34);
-            }
 
-        </style>
     </head>
 
     <body>
-
+        <div class="book-form"></div>
+        <div class="book-shelf">
+            <div class="books"></div>
+            <div class="shelf"></div>
+        </div>
+        <footer>Made by...</footer>
     </body>
 
 </html>
