--- a/index.html
+++ b/index.html
@@ -19,25 +19,27 @@
     <body>
         <div class="book-form-area">
             <h1>Create a Book</h1>
-            <form action="" class="book-form">
-                
+            <form action="" class="book-form" id="book-form">
+
                 <div class="book-title-input">
                     <label for="book-title">Title</label>
-                    <input type="text" id="book-title">
+                    <input type="text" id="book-title" name="book-title">
                 </div>
                 <div>
                     <label for="book-author">Author</label>
-                    <input type="text" id="book-author">
+                    <input type="text" id="book-author" name="book-author">
                 </div>
                 <div class="pages-input">
                     <label for="number-of-pages">Number of Pages</label>
-                    <input type="number" id="number-of-pages" min="1">
+                    <input type="number" id="number-of-pages" min="1"
+                        name="number-of-pages">
                 </div>
                 <div class="read-status-checkbox">
                     <label for="book-read-status">Has Been Read</label>
-                    <input type="checkbox" id="book-read-status">
+                    <input type="checkbox" id="book-read-status"
+                        name="book-read-status">
                 </div>
-                <button>+Add Book</button>
+                <button type="submit">+Add Book</button>
             </form>
         </div>
         <div class="book-shelf">
